--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       QBITIP: ${QBITIP}
       QBITUSER: ${QBITUSER}
       QBITPASS: ${QBITPASS}
+      HOMEASSISTANTWEBHOOK: ${HOMEASSISTANTWEBHOOK}
 
 
 
